# umsl-competition-2019

./: CMakeLists.txt  README.md  prog1  prog1.cpp  prog2  prog2.cpp  prog3  prog3.cpp  prog4  prog4.cpp  prog5  prog5.cpp  prog6  prog6.cpp  prog7  prog7.cpp  prog8.cpp  prog9.cpp
