# This was used for local development
# There is no cmake on delmar

cmake_minimum_required(VERSION 3.4)
project(OPC19)

set(CMAKE_CXX_STANDARD 98)

add_executable(prog1 prog1.cpp)
add_executable(prog2 prog2.cpp)
add_executable(prog3 prog3.cpp)
add_executable(prog4 prog4.cpp)
add_executable(prog5 prog5.cpp)
add_executable(prog6 prog6.cpp)
add_executable(prog7 prog7.cpp)
add_executable(prog8 prog8.cpp)
add_executable(prog9 prog9.cpp)
